增加音量调节

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -129,8 +129,7 @@ x-mask {
 
 @font-face {
     font-family: 'iconfont';
-    /*src:url('../fonts/font.woff') format('woff');*/
-    src: url('http://at.alicdn.com/t/font_1412429828_9014864.woff') format('woff')
+    src:url('../fonts/iconfont.woff') format('woff');
 }
 
 body /deep/ .iconfont{
