--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -154,6 +154,10 @@
                         <input type="checkbox" name="notification" checked="{{config.notification}}" on-change="{{toggle}}"/>
                     </p>
                     <p>
+                        <label for="wheelVolume">滚轮调节音量</label>
+                        <input type="checkbox" name="wheelVolume" checked="{{config.wheelVolume}}" on-change="{{toggle}}"/>
+                    </p>
+                    <p>
                         <label for="lyric">显示歌词</label>
                         <input type="checkbox" name="lyric" checked="{{config.lyric}}" on-change="{{toggle}}" />
                     </p>
