修复滚动条滚动触发音量调节的问题

--- a/components/song-player/index.html
+++ b/components/song-player/index.html
@@ -342,7 +342,7 @@
         bindVolumeEvent : function() {
             var self = this
             var hideDelay = null
-            document.addEventListener('mousewheel', function(e) {
+            document.querySelector('main').addEventListener('mousewheel', function(e) {
                 if(!FM.config.wheelVolume) return
                 var distance = e.wheelDelta
                 var volume = self.player.volume*300
