--- a/components/x-view/index.html
+++ b/components/x-view/index.html
@@ -29,13 +29,13 @@
                 var self = this
                 self.gui = require('nw.gui')
                 self.win = self.gui.Window.get()
-                FM.obs.on('NOTI:CLICK', self.restore.bind(self))
+                FM.obs.on('NOTI:CLICK', self.show.bind(self))
 
                 FM.obs.on('KEY:SHOW_DEV_TOOLS', self.showDevTools.bind(self))
                 FM.obs.on('KEY:RESTART', self.restart.bind(self))
                 FM.obs.on('KEY:QUIT', self.close.bind(self))
                 FM.obs.on('KEY:SHOW_WINDOW', function(){
-                    self.isMin ? self.restore() : self.min()
+                    self.isMin ? self.show() : self.min()
                 })
 
                 self.addTray()
@@ -74,8 +74,8 @@
             },
 
             //显示主窗口
-            restore : function() {
-                this.win.restore()
+            show : function() {
+                this.win.show()
                 this.isMin = false
             },
 
@@ -95,12 +95,12 @@
                 menu.append(new gui.MenuItem({ label: 'Open' }));
                 menu.append(new gui.MenuItem({ label: 'Quit' }));
 
-                menu.items[0].click = self.restore.bind(self)
+                menu.items[0].click = self.show.bind(self)
                 menu.items[1].click = self.close.bind(self)
 
 
                 tray.menu = menu
-                tray.on('click',self.restore.bind(self))
+                tray.on('click',self.show.bind(self))
                 self.tray = tray
             },
 
