增加桌面通知显示时间设置

--- a/components/song-noti/index.html
+++ b/components/song-noti/index.html
@@ -14,6 +14,13 @@
                     body : song.artist + '    ' + song.albumtitle
                 })
 
+	            //自动隐藏
+	            if(FM.config.notiTime) {
+		            setTimeout(function() {
+			            noti.close()
+		            },FM.config.notiTime*1000)
+	            }
+
                 noti.onclick = function() {
                     FM.obs.emit('NOTI:CLICK')
                 }
