--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -146,14 +146,6 @@
                 <h3>其他设置</h3>
                 <div>
                     <p>
-                        <label>界面字体设置</label>
-                        <input name="fontfamily" placeholder="输入字体名称" title="可以输入多个，以逗号分割，按照从前到后的顺序，如果系统中没有前面的字体，则应用后面的" value="{{config.fontfamily}}" on-blur="{{setFontFamily}}" />
-                    </p>
-                    <p>
-                        <label for="notification">启用桌面通知</label>
-                        <input type="checkbox" name="notification" checked="{{config.notification}}" on-change="{{toggle}}"/>
-                    </p>
-                    <p>
                         <label for="wheelVolume">滚轮调节音量</label>
                         <input type="checkbox" name="wheelVolume" checked="{{config.wheelVolume}}" on-change="{{toggle}}"/>
                     </p>
@@ -161,6 +153,18 @@
                         <label for="lyric">显示歌词</label>
                         <input type="checkbox" name="lyric" checked="{{config.lyric}}" on-change="{{toggle}}" />
                     </p>
+	                <p>
+		                <label for="notification">启用桌面通知</label>
+		                <input type="checkbox" name="notification" checked="{{config.notification}}" on-change="{{toggle}}"/>
+	                </p>
+	                <p>
+		                <label>桌面通知时长</label>
+		                <input name="notiTime" placeholder="单位秒" type=number min="0" max="6" value="{{config.notiTime}}" on-blur="{{setNotiTime}}" title="注意：修改通知显示时间后，桌面通知可能不会保存在系统的信息栏" />
+	                </p>
+	                <p>
+		                <label>界面字体设置</label>
+		                <input name="fontfamily" placeholder="输入字体名称" title="可以输入多个，以逗号分割，按照从前到后的顺序，如果系统中没有前面的字体，则应用后面的" value="{{config.fontfamily}}" on-blur="{{setFontFamily}}" />
+	                </p>
                 </div>
             </section>
 		</div>
@@ -267,7 +271,18 @@
             var target = e.currentTarget
             this.applyFontFamily()
             FM.obs.emit('CONFIG:UPDATE', {type: target.name})
-        }
+        },
+
+		//保存桌面通知时间设置
+		setNotiTime : function(e) {
+			var target = e.currentTarget
+			var time = parseFloat(target.value)
+			if(isNaN(time) || time < 0) {
+				target.value = ''
+				return
+			}
+			FM.obs.emit('CONFIG:UPDATE', {type: target.name})
+		}
 	})
 	</script>
 </polymer-element>
