--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -4,7 +4,7 @@
            div {
                position: absolute;
                left: 0;
-               top: 0;
+               top: 100vh;
                width: 100%;
                height: 100%;
                text-shadow: 1px 1px 5px #000;
@@ -18,6 +18,7 @@
            }
 
            .show {
+               top: 0;
                opacity: 1;
                background: rgba(0,0,0,0.4);
            }
