--- a/components/song-playlist/index.html
+++ b/components/song-playlist/index.html
@@ -4,20 +4,21 @@
             div {
                 position: absolute;
                 left: 0;
-                top: 0;
+                top: -100vh;
                 width: 100%;
                 height: 100%;
-                background: rgba(255,255,255,0.7);
-                color: rgba(0,0,0,0.9);
+                background: rgba(0,0,0,0.5);
+                color: rgba(255,255,255,0.5);
                 text-align: left;
                 font-size: 4vh;
                 overflow: hidden;
                 opacity: 0;
                 cursor: pointer;
-                transition : opacity 0.5s ease-in;
+                transition : all 0.5s ease-in;
             }
 
             div.show {
+                top: 0;
                 opacity : 1;
             }
 
@@ -35,12 +36,12 @@
                 border-bottom: 1px solid rgba(0,0,0,0.1);
                 border-top: 1px solid rgba(255,255,255,0.1);
                 cursor: pointer;
-                text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
+                text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
             }
             
             li.playing {
-                color: #f00;
-                text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
+                text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+                background: rgba(0,0,0,0.1);
                 cursor: default;
             }
 
