--- a/components/song-playlist/index.html
+++ b/components/song-playlist/index.html
@@ -45,6 +45,17 @@
                 cursor: default;
             }
 
+            li.playing .title::after {
+	            content : ' ';
+	            float: right;
+	            width: 5px;
+	            height: 5px;
+	            margin: 12px 5px 0 0;
+	            background: rgba(255,255,255,0.7);
+	            border-radius: 5px;
+	            box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+            }
+
             span {
                 display: inline-block;
                 height: 10vh;
@@ -61,6 +72,7 @@
             }
 
             .time {
+	            position: relative;
                 width: 10vw;
             }
 
