--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -85,11 +85,16 @@
                 //歌曲更新后，更换歌词
                 FM.obs.on('SONG:UPDATE', function(song) {
                     self.lrc = []
-                    self.song = song
                     if(!self.isShow) return
-                    process.nextTick(function() {
-                        self.fetchLrc(song)
-                    })
+                    //单曲循环时
+                    if(self.song.id == song.id && self.lrc.length) {
+                        self.reset()
+                    } else {
+                        self.song = song
+                        process.nextTick(function() {
+                            self.fetchLrc(song)
+                        })
+                    }
                 })
 
                 //快捷键切换歌词显示
@@ -108,35 +113,43 @@
                 })
 
                 //歌曲快进后，重新调整歌词位置
-                FM.obs.on('SONG:FAST_FORWARD', function(e) {
-                    if(self.lrc.length) {
-                        self.lrc.forEach(function(line) {
-                            line.class = ''
-                        })
-                    }
-                })
+                FM.obs.on('SONG:FAST_FORWARD', self.reset.bind(self))
 
                 //歌词滚动
-                FM.obs.on('TIME:UPDATE', function(playTime) {
-                    if(self.lrc.length && self.isShow) {
-                        var lines = self.lrc
-                        for(i = 0; i<lines.length; i++) {
-                            if(playTime < lines[i].time) {
-                                lines[i].class = 'next'
-                                if(lines[i-1]) {
-                                    lines[i-1].class = 'current'
-                                }
-                                if(lines[i-2]) {
-                                    lines[i-2].class = 'prev'
-                                }
-                                if(lines[i-3]) {
-                                    lines[i-3].class = 'pass'
-                                }
-                                return
+                FM.obs.on('TIME:UPDATE', self.render.bind(self))
+            },
+
+            //重置歌词位置到初始状态
+            reset: function() {
+                var self = this
+                if(self.lrc.length) {
+                    self.lrc.forEach(function(line) {
+                        line.class = ''
+                    })
+                }
+            },
+
+            //更新歌词位置
+            render: function(playTime) {
+                var self = this
+                if(self.lrc.length && self.isShow) {
+                    var lines = self.lrc
+                    for(i = 0; i<lines.length; i++) {
+                        if(playTime < lines[i].time) {
+                            lines[i].class = 'next'
+                            if(lines[i-1]) {
+                                lines[i-1].class = 'current'
                             }
+                            if(lines[i-2]) {
+                                lines[i-2].class = 'prev'
+                            }
+                            if(lines[i-3]) {
+                                lines[i-3].class = 'pass'
+                            }
+                            return
                         }
                     }
-                })
+                }
             },
 
             //切换歌词显示
