--- a/components/x-share/index.html
+++ b/components/x-share/index.html
@@ -34,7 +34,7 @@
 			<span class="iconfont" title="分享到豆瓣" on-click="{{share}}" data-link="http://shuo.douban.com/!service/share?href={{url}}&name={{title}} &text={{desc}}&image={{pic}}&starid=0&aid=0&style=11&stime=&sig=';">&#xe628;</span>
 			<span class="iconfont" title="分享到微博" on-click="{{share}}" data-link="http://service.weibo.com/share/share.php?url={{url}}&title={{desc}}&pic={{pic}}">&#xe62a;</span>
 			<span class="iconfont" title="分享到腾讯微博" on-click="{{share}}" data-link="http://share.v.t.qq.com/index.php?c=share&a=index&url={{url}}&title={{desc}}&pic={{pic}}">&#xe629;</span>
-			<span class="iconfont" title="分享到qq空间" on-click="{{share}}" data-link="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{url}}&title={{title}}&desc={{desc}} &summary={{desc}}&site=TimoFM{{pic}}">&#xe61e;</span>
+			<span class="iconfont" title="分享到qq空间" on-click="{{share}}" data-link="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{encodeUrl}}&title={{title}}&desc={{desc}} &summary={{desc}}&site=TimoFM{{pic}}">&#xe61e;</span>
 			<span class="iconfont" title="分享到人人" on-click="{{share}}" data-link="http://widget.renren.com/dialog/share?resourceUrl={{url}}&title={{title}}&description={{desc}}{{url}}&pic={{pic}}">&#xe620;</span>
 		</div>
 	</template>
@@ -51,6 +51,7 @@
 					self.pic = song.picture
 					self.desc = '分享 ' + song.artist + '的单曲《' + song.title + '》 '
 					self.url = 'http://douban.fm/?start=' + song.sid + 'g' + song.ssid + 'g'
+					self.encodeUrl = encodeURIComponent(self.url)
 				})
 			},
 
