--- a/components/panel-about/index.html
+++ b/components/panel-about/index.html
@@ -92,18 +92,8 @@
         localUrl : './package.json',
         remoteUrl : 'https://raw.githubusercontent.com/sapjax/TimoFM/master/package.json',
         ready : function() {
-            this.setVersion()
+            this.version = require(this.localUrl).version
             __updateFile = this.__updateFile
-        },
-
-        setVersion : function() {
-            var self = this
-            var fs = require('fs')
-            fs.readFile(self.localUrl, function(err, data){
-                if(err) console.error(err)
-                data = JSON.parse(data.toString())
-                self.version = data.version
-            })
         },
 
         goToLink : function(e) {
