打开控制台的情况下刷新，删除任务栏图标

--- a/components/x-view/index.html
+++ b/components/x-view/index.html
@@ -46,6 +46,13 @@
                 FM.obs.on('SONG:STAR', function(song) {
                     self.updateTray(song)
                 })
+
+                window.addEventListener('beforeunload', function() {
+                    if(self.tray) {
+                        self.tray.remove()
+                        self.tray = null
+                    }
+                })
             },
 
             //最小化
