歌词改成桌面歌词

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@ ul, li {
 }
 
 body {
-    font-family: Papyrus;
+    font-family: Skia, STKaiti, sans-serif;
     transition: background 0.4s ease-in;
 }
 
