--- a/components/song-info/index.html
+++ b/components/song-info/index.html
@@ -8,7 +8,7 @@
                 display: -webkit-box;
                 -webkit-line-clamp : 2;
                 -webkit-box-orient: vertical;
-                margin: 16vh 0 2vh 0;
+                margin: 16vh 0 8vh 0;
                 padding: 0 2vw;
                 font-size: 3.5vw;
                 overflow: hidden;
@@ -22,7 +22,7 @@
                 text-overflow: ellipsis;
             }
             h3 {
-                margin: 4vh 0;
+                margin: 8vh 0 0 0;
                 padding: 0 2vw;
                 font-size: 2vw;
             }
