--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -36,7 +36,7 @@ body {
     height: 80vh;
     padding: 10vh 0;
     background: rgba(200, 200, 200, 0.5);
-    box-shadow: 1px 1px 2px rbga(0,0,0,0.1);
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 .sidebar .nav li {
@@ -100,11 +100,12 @@ song-face {
     top: 0;
     bottom: 0;
     width: 50%;
-    transition: left 0.4s ease-in;
+    transition: all 0.4s ease-in;
 }
 
 song-face.hover {
     left: 50%;
+    transform: rotateY(180deg);
 }
 
 x-view {
