--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -165,10 +165,10 @@
                         <label>桌面通知时长</label>
                         <input name="notiTime" placeholder="单位秒" type=number min="0" max="6" value="{{config.notiTime}}" on-blur="{{setNotiTime}}" title="注意：修改通知显示时间后，桌面通知可能不会保存在系统的信息栏" />
                     </p>
-                    <p>
-                        <label>界面字体设置</label>
-                        <input name="fontfamily" placeholder="输入字体名称" title="可以输入多个，以逗号分割，按照从前到后的顺序，如果系统中没有前面的字体，则应用后面的" value="{{config.fontfamily}}" on-blur="{{setFontFamily}}" />
-                    </p>
+                    <!--<p>-->
+                        <!--<label>界面字体设置</label>-->
+                        <!--<input name="fontfamily" placeholder="输入字体名称" title="可以输入多个，以逗号分割，按照从前到后的顺序，如果系统中没有前面的字体，则应用后面的" value="{{config.fontfamily}}" on-blur="{{setFontFamily}}" />-->
+                    <!--</p>-->
                 </div>
             </section>
         </div>
