--- a/components/song-noti/index.html
+++ b/components/song-noti/index.html
@@ -23,6 +23,7 @@
 
                 noti.onclick = function() {
                     FM.obs.emit('NOTI:CLICK')
+                    FM.obs.emit('SONG:UPDATE', song)
                 }
             }
         })
